--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -1,13 +1,13 @@
-name: provider-xyz-native
+name: provider-intersight-native
 runtime: yaml
 plugins:
   providers:
-    - name: xyz
+    - name: intersight
       path: ../../bin
 
 resources:
   myRandomResource:
-    type: xyz:Random
+    type: intersight:Random
     properties:
       length: 24
 
