--- a/backups/makefile.yaml
+++ b/backups/makefile.yaml
@@ -32,7 +32,7 @@ jobs:
       name: Unshallow clone for tags
       id: tags
       run: |
-        mkdir $(whoami) /__w/pulumi-intersight-native/pulumi-intersight-native
+        sudo chown -R $(whoami) /__w/pulumi-intersight-native/pulumi-intersight-native
         sudo chown -R $(whoami) /__w/pulumi-provider-boilerplate/pulumi-provider-boilerplate
         git config --global --add safe.directory /__w/pulumi-provider-boilerplate/pulumi-provider-boilerplate
         git fetch --prune --unshallow --tags
