split folder creation

--- a/.github/workflows/makefile.yaml
+++ b/.github/workflows/makefile.yaml
@@ -32,6 +32,7 @@ jobs:
       name: Unshallow clone for tags
       id: tags
       run: |
+        mkdir /__w/pulumi-provider-boilerplate
         mkdir /__w/pulumi-provider-boilerplate/pulumi-provider-boilerplate
         sudo chown -R $(whoami) /__w/pulumi-provider-boilerplate/pulumi-provider-boilerplate
         git config --global --add safe.directory /__w/pulumi-provider-boilerplate/pulumi-provider-boilerplate
