--- a/backups/.goreleaser.yml
+++ b/backups/.goreleaser.yml
@@ -1,6 +1,9 @@
 archives:
   - id: archive
     name_template: '{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}'
+before:
+  hooks:
+    - make gen_examples
 builds:
   - binary: pulumi-resource-intersight
     dir: provider
